--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,5 +22,7 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+    - name: Build DemoLibrary
+      run: dotnet build DemoLibrary/DemoLibrary.csproj
+    - name: Build WinFormUI
+      run: dotnet build WinFormUI/WinFormUI.csproj
